
Additions:
    * ecore_con:
     - Add Ecore_Con_Eet API to help using Eet_Data with Ecore_Con.
    * ecore_x:
     - ECORE_X_ATOM_E_ILLUME_ACCESS_ACTION_UP
     - ECORE_X_ATOM_E_ILLUME_ACCESS_ACTION_DOWN
     - Fix ecore_x_randr functions to work properly.
    * ecore_imf:
     - Add ECORE_IMF_INPUT_PANEL_RETURN_KEY_TYPE_SIGNIN
     - Add ECORE_IMF_PREEDIT_TYPE_SUB4~7 style

Fixes:

Improvements:

Ecore 1.7.0

Changes since Ecore 1.2.0:
--------------------------

Additions:
    * ecore:
     - Add ecore_main_fd_handler_file_add()
     - Add ecore_fork_reset()
    * ecore_evas:
     - Add transparency support on Windows (GDI engine only)
     - Add API functions to get/set an Ecore_Evas's profile.
    * ecore_x:
     - Add Ecore_X_Error_Code enumeration
     - ECORE_X_RANDR_OUTPUT_POLICY_ASK
     - Add API functions to get/set an Ecore_X window's profile
    * ecore_con:
     - ECORE_{CON,IPC}_NO_PROXY now available for disabling proxying on certain connections
     - New dns.c resolver backend for faster dns lookups
    * immodule:
     - Add immodule for supporing ibus

Fixes:
    * ecore
     - Prevent running out of fd when cycling ecore_init/ecore_shutdown.
     - Reduce rounding error in ecore_animator_pos_map.
     - Send mouse move event before mouse down event in ecore_extn
     - Reduce race condition on shutdown of Ecore_Thread.
     - Force cancel of all running Ecore_Thread on shutdown.
     - Make Ecore_Thread work reliably when called without a running main loop.
     - Correctly shutdown Ecore_Thread.
     - Fix usage of FD_SET and al. when fd_set pointers are NULL (Windows)
     - Fix ecore_thread seg fault on Windows where PHS() was returning a wrong value
     - Always call evas_render_update_free to prevent leak in Ecore_Evas X bakcend.

    * ecore_x
     - Fix unitialized Ecore_X_Atom use.


Ecore 1.2.0

Changes since Ecore 1.1.0:
--------------------------

Additions:
    * ecore
     - ecore_timer_reset()
    * ecore_con